--- a/front-end/src/components/Header/index.module.css
+++ b/front-end/src/components/Header/index.module.css
@@ -45,13 +45,22 @@
 }
 
 .container__button button {
-  background-color: #e8cd02;
   border: none;
+  gap: 1px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   color: #3E3E3E;
-  font-size: 18px;
-  padding: 10px 35px;
-  border-radius: 5px;
-  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.149);
+  padding-top: 15px;
+  font-size: 30px;
+  background-color: #F7F7F7;
+}
+
+.container__button button > span {
+  font-size: 15px;
+  font-weight: 600;
+  color: #3E3E3E;
+  margin-left: -5px;
 }
 
 .container__button button:hover {
